--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "turtle-set",
+  "name": "bird-nerd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "http://marsbird.github.io/turtle-set",
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "webpack",
@@ -16,8 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "bcrypt": "^5.1.1",
+    "chai": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
