--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chai": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
