--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
